feat(): last update for frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SWISS PADEL</title>
+    <meta name="description" content="Swiss Padel Stars - une marque premium, exclusive et innovante, qui s’inspire des codes du golf et de la voile pour élever le padel au rang de sport d’image et de distinction en Suisse." />
+    <meta name="keywords" content="padel, padel suisse, padel premium, padel exclusif, padel innovant, sport d'image, sport de distinction" />
+    <meta name="author" content="Swiss Padel Stars" />
   </head>
   <body>
     <div id="root"></div>
